<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="12"
    android:orientation="horizontal" >

    <Space
        android:layout_column="11"
        android:layout_gravity="fill_vertical"
        android:layout_row="5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal|top"
        android:text="@string/INFORMATION"
        android:textColor="#00ccff"
        android:textSize="45sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="10"
        android:contentDescription="@string/download"
        android:src="@drawable/download" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="13"
        android:contentDescription="@string/flip"
        android:src="@drawable/flip" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="15"
        android:contentDescription="@string/snap"
        android:src="@drawable/snap" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="20"
        android:contentDescription="@string/uploadupload"
        android:src="@drawable/upload" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="205dp"
        android:layout_column="3"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="13"
        android:text="@string/flipstatement"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00ccff" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="190dp"
        android:layout_column="3"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="20"
        android:text="@string/uploadstatement"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00ccff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="center"
        android:layout_row="10"
        android:text="@string/Downloadstatement"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00ccff" />

    <TextView
        android:id="@+id/textView3"
        android:layout_column="3"
        android:layout_gravity="center"
        android:layout_row="15"
        android:text="@string/takepicstatement"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00ccff" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_column="3"
        android:layout_gravity="left|top"
        android:layout_row="23"
        android:contentDescription="@string/Undo"
        android:src="@drawable/undo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="238dp"
        android:layout_column="3"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="23"
        android:text="@string/undostatement"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00ccff" />

    <Space
        android:layout_width="15dp"
        android:layout_height="150dp" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_column="3"
        android:layout_gravity="bottom|right"
        android:layout_row="34"
        android:contentDescription="@string/Undo"
        android:src="@drawable/undo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="202dp"
        android:layout_height="71dp"
        android:layout_column="3"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="23"
        android:text="@string/switchstatement"
        android:textColor="#00ccff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_column="3"
        android:layout_gravity="left|bottom"
        android:layout_row="23"
        android:contentDescription="@string/switchcameras"
        android:src="@drawable/switchbutton" />

</GridLayout>
