<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0099cc" >

    <!-- hello -->

    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <RelativeLayout
        android:id="@+id/fullscreen_content_controls"
        style="?buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="bottom"
        android:background="@color/black_overlay"
        android:columnCount="2"
        android:contentDescription="@string/snap"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

        <ImageButton
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:contentDescription="@string/uploadupload"
            android:src="@drawable/upload" />

        <ImageButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/gallery"
            android:layout_gravity="right"
            android:contentDescription="@string/info"
            android:src="@drawable/info" />

        <ImageButton
            android:id="@+id/takepicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/takephoto"
            android:src="@drawable/snap" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/switchcameras"
        android:src="@drawable/switchbutton" />

</FrameLayout>
